--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,70 @@
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+/* 
+.contenedor {
+    background-color: rgb(5, 4, 4);
+    display: flex;
+    width: 20%;
+    height: 5%;
+    color: white;
+    letter-spacing: 7px;
+    font-size: xx-large;
+    justify-content: center;
+    padding: 10px;
+    margin: 5px;
+}
+
+.one {
+    background-color: rgb(42, 40, 40);
+    width: 40px;
+    border: 1px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+
+}
+
+.two {
+    background-color: rgb(42, 40, 40);
+    width: 40px;
+    border: 1px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+}
+
+.three {
+    background-color: rgb(42, 40, 40);
+    width: 40px;
+    border: 1px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+}
+
+.four {
+    background-color: rgb(42, 40, 40);
+    width: 40px;
+    border: 1px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+}
+
+.five {
+    background-color: rgb(42, 40, 40);
+    width: 60px;
+    border: 1px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    justify-content: center;
+}
+  
 
 */
